--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ build/Release
 
 # Dependency directories
 node_modules/
+package-lock.json
+.gitignore
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
